--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "sendmail": "^1.6.1",
     "sequelize": "^6.18.0",
     "username": "^6.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.24"
   }
 }
